--- a/src/components/ImageItem/index.css
+++ b/src/components/ImageItem/index.css
@@ -1,5 +1,11 @@
 .thumbnail {
-  height: 110px;
+  height: 170px;
   margin: 10px;
-  width: 110px;
+  width: 170px;
+}
+.img-btn {
+  background-color: transparent;
+  border: 0px;
+  cursor: pointer;
+  outline: none;
 }
